# bot_discord

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: challenge.rs  math.rs  mod.rs  owners.rs  ping.rs
